# metax

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.base  Dockerfile.opensearch  README.md  config.py  config_.py  constants.py  databases_migrations.py  discount_service.docker-compose.yml  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.logging.yml  docker-compose.metax.yml  docker-compose.prod.yml  docker-compose.taskiq.yml  docker-compose.test.yml  entrypoint.py  env_file_validator.py  env_structure_validator.py  env_template  env_tmpl  fluent-bit.conf  main_error.py  metax.docker-compose.yml  metax_application.py  metax_application_manager.py  metax_bootstrap.py  metax_cli_app.py  metax_configs.py  metax_django_application.py  metax_error.py  metax_lifespan.py  metax_main_error.py  parsers.conf  pyproject.toml  requirements.txt  run_celery.py  run_discount_service.py  (+5 more)
.github/workflows/: pull_request_quality_check.yml
app/: main_error.py  main_exception.py
app/core/application/patterns/: discounted_product_factory.py  result_type.py
app/core/application/ports/: discounted_product_factory.py
app/core/domain/: ddd_patterns.py  domain_error.py
app/interface_adapters/: error_view_model.py
app/interface_adapters/controllers/: category.py
app/interface_adapters/patterns/: operation_result.py
backend/: main_error.py
backend/core/application/patterns/: command_handler_abc.py  domain_event_handler_abc.py  empty_dto.py  event_handler_abc.py  message_buss.py  result_type.py  unit_of_work.py  unit_of_work_factory.py  use_case_abc.py
backend/core/domain/: ddd_patterns.py  domain_event.py  event.py
backend/frameworks_and_drivers/di/: boostrap.py  command_handlers_container.py  commands_handlers_container.py  controllers_container.py  event_handlers_container.py  main_container.py  patterns_container.py  presenters_container.py  repositories_container.py  use_cases.py  use_cases_container.py
backend/frameworks_and_drivers/django_framework/: manage.py
backend/frameworks_and_drivers/patterns/: discounted_product_factory.py  unit_of_work.py  unit_of_work_factory.py
backend/frameworks_and_drivers/repositories/: category.py  discounted_product.py  discounted_product_read_model.py  retailer.py
backend/interface_adapters/: empty_view_model.py  error_view_model.py
backend/interface_adapters/controllers/: category.py  retailer.py
backend/interface_adapters/patterns/: empty_view_model.py  operation_result.py
backend/interface_adapters/presenters/ports/: category.py  (+2 more)
backend/interface_adapters/view_models/: base_view_model.py  category.py  discounted_product.py  retailer.py
discount_service/: discount_service.docker-compose.yml  env_template  run_discount_service.py  run_django_rest_server.py
discount_service/core/domain/: ddd_patterns.py
discount_service/frameworks_and_drivers/celery/: celery_application.py
discount_service/frameworks_and_drivers/celery_framework/: celery_application.py  tasks.py  utils.py
discount_service/frameworks_and_drivers/di/: __init__.py  boostrap.py  bootstrap.py  commands_handlers_container.py  discounted_product_factories_container.py  discounted_products_collector_serice_factories_container.py  discounted_products_collector_services_container.py  event_handlers_container.py  patterns_container.py  repositories_container.py  scrappers_adapters_container.py  scrappers_adapters_selector_container.py  use_cases_container.py
discount_service/frameworks_and_drivers/django_framework/: db_for_dev  manage.py
discount_service/frameworks_and_drivers/mixins/: parallel_task_mixin.py
discount_service/frameworks_and_drivers/opensearch/: migration.py
discount_service/frameworks_and_drivers/patterns/: discounted_product_factory.py  discounted_products_collector_service_factories.py  repositories_factory.py  retailer_registry.py  unit_of_work.py  unit_of_work_factory.py
discount_service/frameworks_and_drivers/repositories/: category.py  discounted_product.py  discounted_product_read_model.py  retailer.py
discount_service/frameworks_and_drivers/scrappers/: sas_am.py  scrapper_abc.py  yerevan_city_scrapper.py
discount_service/frameworks_and_drivers/scrappers_adapters/: sas_am_scrapper_adapter.py  scrapper_adapter.py  yerevan_city_scrapper_adapter.py
discount_service/frameworks_and_drivers/scrappers_strategies/: sas_am_scrapper_strategy.py  scrapper_strategy_abc.py  yerevan_city_scrapper_strategy.py
discount_service/frameworks_and_drivers/services/: discounted_products_collector.py  discounted_products_collectors.py  errors.py
discount_service/frameworks_and_drivers/utils/: iterators_.py
docker/: fluent-bit.conf
fluent-bit/: fluent-bit.conf  parsers.conf
logger/: logger.py
metax/core/domain/: ddd_patterns.py  general_value_objects.py
metax/frameworks_and_drivers/celery_framework/: celery_application.py  error_codes.py  errors.py  tasks.py
metax/frameworks_and_drivers/di/: __init__.py  bootstrap.py  metax_container.py  patterns_container.py  repositories_container.py  resources.py  resources_container.py  scrappers_adapters_container.py  scrappers_adapters_selector_container.py
metax/frameworks_and_drivers/django_framework/: manage.py
metax/frameworks_and_drivers/gunicorn/: gunicorn.conf.py  run_gunicorn_server.py
metax/frameworks_and_drivers/mixins/: discounted_product_fields_cleaner.py
metax/frameworks_and_drivers/opensearch/: migration.py
metax/frameworks_and_drivers/pydanja_/: pydanja_resource.py  pydanja_resources.py
metax/frameworks_and_drivers/scrappers_adapters/: sas_am_scrapper_adapter.py  scrapper_adapter.py  yerevan_city_scrapper_adapter.py
metax/frameworks_and_drivers/taskiq_framework/: broker.py  errors.py  middlewares.py  tasks.py
metax/frameworks_and_drivers/uvicorn/: run_uvicorn_server.py
metax_db_migrations_cli/: postgres.py
metax_logger/: logger.py  request_id_filter.py
metax_migrations_cli/: postgres.py
tests/: conftest.py  db_teardown.py  utils.py
tests/e2e/: conftest.py  test_collect_discounted_products.py
tests/integration/: conftest.py
(+499 files in other folders)
