[project]
name = "metax"
version = "0.1.0"
requires-python = "==3.14.2"
dependencies = [
    "adrf==0.1.12",
    "celery[pytest]==5.6.2",
    "celery-types==0.24.0",
    "dependency-injector[pydantic2]==4.48.3",
    "django-stubs==5.2.9",
    "gunicorn==25.1.0",
    "mypy==1.19.1",
    "opensearch-py[async]==3.1.0",
    "pre-commit==4.5.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-django==4.11.1",
    "python-dotenv==1.2.1",
    "redis==7.1.1",
    "ruff==0.15.1",
    "uvicorn==0.40.0",
    "whitenoise==6.11.0",
    "psycopg[c,pool]==3.3.2",
    "djangorestframework-stubs==3.16.8",
    "types-psycopg2==2.9.21.20251012",
    "requests==2.32.5",
    "httpx==0.28.1",
    "beautifulsoup4==4.14.3",
    "lxml==6.0.2",
]

[tool.mypy]
strict = true
show_error_codes = true
mypy_path = ".:metax/frameworks_and_drivers/django_framework"
explicit_package_bases = true
namespace_packages = true

plugins = ["mypy_django_plugin.main", "pydantic.mypy"]

exclude = [
    'metax/frameworks_and_drivers/django_framework/django_framework/metax/views/.*',
    'metax/frameworks_and_drivers/django_framework/django_framework/metax/serializers/.*',
]



# Warns if function parameters and return value is not annotated
disallow_untyped_defs = true

# Warns if module components have not type hints
disallow_any_unimported = true

# Doesn't warn if function body is not annotated
check_untyped_defs = true

# Warns if function parameter by default is None, but it was not annotated
# def greet(name: str = None):  # Error!
#    print(f"Hello, {name}")
no_implicit_optional = true

# Warns if function return Any
warn_return_any = true

# Warns if there are unused `type: ignore`
warn_unused_ignores = true

# Warns if some package or library has not stubs
ignore_missing_imports = false

# Warns about redundant 'cast' calls
warn_redundant_casts = true

# Warns if code is unreachable.
warn_unreachable = true

# Warns if decorator function parameter is not annotated
disallow_untyped_decorators = true

# Warns if code is checking two different types equality (using == operator, but for None doesn't warn)
strict_equality = true

# Include None for strict_equality
strict_equality_for_none = true

# Warns if function's return is missed
warn_no_return = true

enable_error_code = ["explicit-override"]

# See https://mypy.readthedocs.io/en/stable/config_file.html#confval-strict_equality:~:text=for%20more%20info.-,implicit_reexport,-%C2%B6
implicit_reexport = false
no_implicit_reexport = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = "django_framework.metax.views.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "django_framework.metax.serializers.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "adrf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "django.db.backends.postgresql.psycopg_any"
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "django_framework.settings"
strict_model_abstract_attrs = true

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 115
indent-width = 4

[tool.ruff.lint]
ignore = [
    "COM812", # check commas in collections
    "RET504",  # see https://docs.astral.sh/ruff/rules/unnecessary-assign/
    "PGH003"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"*/test_*.py" = ["S101"]

extend-select = [
    "E",      # PyCodeStyle errors
    "W",      # PyCodeStyle warnings
    "I",      # Rules for sorting imports
    "S",      # flake8-bandit
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "PTH",    # Using Pathlib instead of os.path
    "SLF",    # Access protected member
    "ASYNC",  # flake8-async
    "DJ",     # flake8-django
    "DTZ",    # flake8-datetimez
    "EM",     # flake8-errmsg
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "ARG",    # flake8-unused-arguments
    "FLY",    # flynt
    "N",      # pep8-naming
    "PERF101",# Avoid creating list/tuple from iterable unnecessarily
    "F",      # Pyflakes
    "PGH",    # pygrep-hooks
    "UP006",  # Use list/dict instead of typing.List/Dict
    "RUF007", # Prefer itertools.pairwise() over zip()
    "RUF008", # Avoid mutable default in dataclasses.field
    "RUF049", # Enum should not be a dataclass
]

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"



[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
DJANGO_SETTINGS_MODULE = "metax.frameworks_and_drivers.django_framework.django_framework.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
pythonpath = [
    ".",
    "metax/frameworks_and_drivers/django_framework",
]
