[project]
name = "metax"
version = "0.1.0"
requires-python = "==3.14.2"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "celery-types>=0.26.0",
    "dependency-injector>=4.49.0",
    "django-modern-rest>=0.5.0",
    "django-stubs[compatible-mypy]>=6.0.2",
    "dotenv-linter>=0.7.0",
    "gunicorn[fast]>=25.3.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "mypy>=1.20.0",
    "opensearch-py[async]>=3.1.0",
    "pre-commit>=4.5.1",
    "psycopg[c,pool]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-celery>=1.3.0",
    "pytest-django>=4.12.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "ruff>=0.15.9",
    "types-gunicorn>=25.3.0.20260408",
    "types-psycopg2>=2.9.21.20260408",
    "uvicorn>=0.44.0",
    "uvloop>=0.22.1",
    "whitenoise>=6.12.0",
]


[tool.mypy]
strict = true
show_error_codes = true
plugins = ["mypy_django_plugin.main", "pydantic.mypy"]
mypy_path = ".:metax/frameworks_and_drivers/django_framework"
enable_error_code = ["explicit-override"]

explicit_package_bases = true
namespace_packages = true
allow_redefinition = false
disallow_untyped_defs = true
disallow_any_unimported = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = false
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_decorators = true
strict_equality = true
strict_equality_for_none = true
warn_no_return = true
implicit_reexport = false
no_implicit_reexport = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
warn_unused_configs = true
local_partial_types = true
extra_checks = true

[tool.django-stubs]
django_settings_module = "django_framework.settings"
strict_model_abstract_attrs = true

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 115
indent-width = 4

[tool.ruff.lint]
ignore = [
    "COM812", # check commas in collections
    "RET504",  # see https://docs.astral.sh/ruff/rules/unnecessary-assign/
    "PGH003"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"*/test_*.py" = ["S101"]

extend-select = [
    "E",      # PyCodeStyle errors
    "W",      # PyCodeStyle warnings
    "I",      # Rules for sorting imports
    "S",      # flake8-bandit
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "PTH",    # Using Pathlib instead of os.path
    "SLF",    # Access protected member
    "ASYNC",  # flake8-async
    "DJ",     # flake8-django
    "DTZ",    # flake8-datetimez
    "EM",     # flake8-errmsg
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "ARG",    # flake8-unused-arguments
    "FLY",    # flynt
    "N",      # pep8-naming
    "PERF101",# Avoid creating list/tuple from iterable unnecessarily
    "F",      # Pyflakes
    "PGH",    # pygrep-hooks
    "UP006",  # Use list/dict instead of typing.List/Dict
    "RUF007", # Prefer itertools.pairwise() over zip()
    "RUF008", # Avoid mutable default in dataclasses.field
    "RUF049", # Enum should not be a dataclass
]

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"



[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
DJANGO_SETTINGS_MODULE = "metax.frameworks_and_drivers.django_framework.django_framework.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
pythonpath = [
    ".",
    "metax/frameworks_and_drivers/django_framework",
]
