[project]
name = "metax"
version = "0.1.0"
requires-python = "==3.14.2"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "celery-types>=0.26.0",
    "dependency-injector>=4.49.0",
    "django-asgi-lifespan>=0.5.1",
    "django-modern-rest[jwt,openapi,pydantic]>=0.7.0",
    "django-stubs[compatible-mypy]>=6.0.2",
    "gunicorn[fast]>=25.3.0",
    "httpx>=0.28.1",
    "lxml>=6.1.0",
    "mypy>=1.20.1",
    "opensearch-py[async]>=3.1.0",
    "pre-commit>=4.5.1",
    "psycopg[c,pool]>=3.3.3",
    "pydanja>=0.1.32",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-celery>=1.3.0",
    "pytest-django>=4.12.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "ruff>=0.15.10",
    "typer>=0.24.1",
    "types-gunicorn>=25.3.0.20260408",
    "types-psycopg2>=2.9.21.20260408",
    "uv-audit>=0.1.9",
    "uvicorn>=0.44.0",
    "uvloop>=0.22.1",
    "whitenoise>=6.12.0",
]

[tool.mypy]
strict = true
show_error_codes = true
plugins = ["mypy_django_plugin.main", "pydantic.mypy"]
mypy_path = ".:metax/frameworks_and_drivers/django_framework"
enable_error_code = ["explicit-override"]

explicit_package_bases = true
namespace_packages = true
allow_redefinition = false

disallow_any_generics = true
disallow_any_unimported = true
disallow_subclassing_any = true

disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
check_untyped_defs = true

no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
warn_unused_configs = true
warn_return_any = true

strict_equality = true
strict_equality_for_none = true

ignore_missing_imports = false
implicit_reexport = false

local_partial_types = true
extra_checks = true

[tool.django-stubs]
django_settings_module = "django_framework.settings"
strict_model_abstract_attrs = true
strict_model_instances = true

[tool.pydantic.mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
preview = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 115
indent-width = 4

[tool.ruff.lint]
ignore = [
    "COM812",  # trailing commas (conflicts with formatter)
    "RET504",  # https://docs.astral.sh/ruff/rules/unnecessary-assign/
    "PGH003",
]
extend-select = [
    "A",
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "COM",
    "D2",
    "D3",
    "D4",
    "DJ",
    "DOC",
    "DTZ",
    "E",
    "EM",
    "F",
    "FA",
    "FLY",
    "I",
    "ICN",
    "ISC",
    "N",
    "PERF101",
    "PGH",
    "PIE",
    "PTH",
    "RET",
    "RSE",
    "RUF",
    "RUF007",
    "RUF008",
    "RUF049",
    "S",
    "SIM",
    "SLF",
    "T20",
    "TID",
    "UP006",
    "W",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"gunicorn.conf.py" = [
    "D101",
    "D102",
    "D103",
    "D2",
    "D3",
    "D4",
    "DOC102",
    "N999",
]
"metax/frameworks_and_drivers/django_framework/django_framework/metax/migrations/*" = [
    "D101",
    "D102",
    "D103",
    "D2",
    "D3",
    "D4",
    "DOC102",
    "E501",
    "RUF012",
    "RUF015",
]
"*/test_*.py" = [
    "D101",
    "D102",
    "D103",
    "D2",
    "D3",
    "D4",
    "DOC102",
    "PLR0913",
    "S101",
]
"tests/*" = [
    "D101",
    "D102",
    "D103",
    "D2",
    "D3",
    "D4",
    "DOC102",
    "PLR0913",
    "S101",
]

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
DJANGO_SETTINGS_MODULE = "metax.frameworks_and_drivers.django_framework.django_framework.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
pythonpath = [
    ".",
    "metax/frameworks_and_drivers/django_framework",
]
